﻿# Enter a description of the change. high contrast fix for Memory panel

--- a/front_end/network/requestHeadersTree.css
+++ b/front_end/network/requestHeadersTree.css
@@ -107,3 +107,31 @@
 .header-highlight {
     background-color: #FFFF78
 }
+
+@media (forced-colors: active) {
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li.selected .selection {
+        forced-color-adjust: none;
+        background: Canvas !important;
+        border: none !important;
+    }
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus {
+        forced-color-adjust: none;
+        background: Canvas !important;
+        box-shadow: inset 0 0 0 1px Highlight !important;
+    }
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li::before {
+        background-color: ButtonText !important;
+    }
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li.selected.parent::before {
+        background-color: ButtonText !important;
+    }
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li.selected.parent,
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li.selected.parent span,
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus .status-from-cache {
+        forced-color-adjust: none;
+        color: ButtonText !important
+    }
+    :host-context(.request-headers-tree) ol.tree-outline:not(.hide-selection-when-blurred) span[is=dt-icon-label] {
+        forced-color-adjust: none;
+    }
+}
