--- a/front_end/ui/softContextMenu.css
+++ b/front_end/ui/softContextMenu.css
@@ -124,3 +124,42 @@
     opacity: 1;
     filter: none;
 }
+
+@media (forced-colors: active) {
+    .soft-context-menu {
+        border: 1px solid ButtonText !important;
+    }
+    .soft-context-menu-shortcut {
+        color: ButtonText !important;
+    }
+    .soft-context-menu-item {
+        forced-color-adjust: none;
+    }
+    .soft-context-menu-item-mouse-over {
+        border-top: 1px solid Highlight;
+        border-bottom: 1px solid Highlight;
+        background-color: Highlight !important;
+        color: HighlightText !important;
+    }
+    .soft-context-menu-item-mouse-over .spritesheet-smallicons:not(.icon-mask) {
+        background-image: unset;
+    }
+    .soft-context-menu-item-mouse-over .soft-context-menu-shortcut {
+        color: HighlightText !important;
+    }
+    .soft-context-menu[data-keyboard-focus="true"]:focus {
+        forced-color-adjust: none;
+        background: Canvas !important;
+        border-color: Highlight !important;
+        box-shadow: 0 0 0 1px Highlight inset !important;
+    }
+    .soft-context-menu-separator > .separator-line {
+        border-bottom: 1px solid ButtonText;
+    }
+    .checkmark {
+        opacity: 1;
+    }
+    :host-context(.-theme-with-dark-background) .checkmark {
+        filter: invert(100%);
+    }
+}
